fixed header overflow to the side

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body a {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 100vw;
   min-height: 100vh;
   background-color: #5598cc;
   color: white;
